[PL-14] - Add get products list endpoint
